Tableaux paires de faces

--- a/Poissons.bib
+++ b/Poissons.bib
@@ -46,4 +46,10 @@
   pages = {105277}
 }
 
+@article{OEIS,
+  author  = {OEIS},
+  title   = {The On-Line Encyclopedia of Integer Sequences},
+  pages = {Published electronically at \texttt{http://oeis.org}},
+  year            = {2022}
+}
 
