--- a/Poissons.tex
+++ b/Poissons.tex
@@ -85,6 +85,9 @@
 
 \newcommand{\0}{\color{blue}{\mathsf{0}}}
 
+%OEIS
+\newcommand{\OEIS}[1]{{\rm \href{http://oeis.org/#1}{\texttt{#1}}}}
+
 
 
 \DeclareMathOperator{\Ima}{Im} %Image d'une fonction
@@ -180,8 +183,8 @@ The purpose of this note is to provide a new combinatorial description
 
 TBC
 
-\subsection{Conventions}
-We use the notations of \cite{LodayVallette12} for operads.
+%\subsection{Conventions}
+%We use the notations of \cite{LodayVallette12} for operads.
 
 \section{Poissons}
 
@@ -251,6 +254,91 @@ E(m)=\{(I,J)\in D(m)| \min(J)<\min(I-\min(I)), |\llbracket 1; k \rrbracket \cap 
 \begin{proof}
 It follows directly from the fish condition: if the fish condition is satisfied, as inversions of $\sigma_1$ are included in inversions of $\sigma_2$, we get $j_{k-1},j_k<i_k$ for any $k>1$.
 \end{proof}
+
+\begin{figure}[h]
+\centerline{
+\begin{tabular}{r|c}
+\textbf{dim} & \textbf{0}  \\
+\hline
+\textbf{0} & 1  
+\end{tabular}
+\ \ \
+\begin{tabular}{r|cc}
+\textbf{dim} & \textbf{0} & \textbf{1}  \\
+\hline
+\textbf{0} & 3 & 1 \\
+\textbf{1} & 1 &  
+\end{tabular}
+\ \ \
+\begin{tabular}{r|ccc}
+\textbf{dim} & \textbf{0} & \textbf{1} & \textbf{2}  \\
+\hline
+\textbf{0} & 17 & 12 & 1 \\
+\textbf{1} & 12 &  6 & \\
+\textbf{2} & 1 &  & 
+\end{tabular}
+\ \ \
+\begin{tabular}{r|cccc}
+\textbf{dim} & \textbf{0} & \textbf{1} & \textbf{2} & \textbf{3} \\
+\hline
+\textbf{0} & 149 & 162 & 38 & 1 \\
+\textbf{1} & 162 & 150 & 24 & \\
+\textbf{2} & 38 & 24 & & \\
+\textbf{3} & 1 & & &
+\end{tabular}
+}
+\caption{Number of pairs of faces in the cellular image of the diagonal $0$, $1$, $2$ and $3$-dimensional permutahedra.}
+\label{t:dim1-3}
+\end{figure}
+
+\begin{figure}[h]
+\centerline{
+\begin{tabular}{r|ccccc}
+\textbf{dim} & \textbf{0} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} \\
+\hline
+\textbf{0} & 1809 & 2660 & 1080 & 110 & 1 \\
+\textbf{1} & 2660 & 3540 & 1200 & 80 & \\
+\textbf{2} & 1080 & 1200 & 270 & & \\
+\textbf{3} & 110 & 80 & && \\
+\textbf{4} & 1 & & & &
+\end{tabular}
+\ \ \
+\begin{tabular}{r|cccccc}
+\textbf{dim} & \textbf{0} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} \\
+\hline
+\textbf{0} & 28399 & 52635 & 30820 & 6165 & 302 & 1 \\
+\textbf{1} & 52635 & 90870 & 67580 & 7785 & 240 & \\
+\textbf{2} & 30820 & 47580 & 20480 & 2160 & & \\
+\textbf{3} & 6165 & 7785 & 2160 & && \\
+\textbf{4} & 302 & 240 & & &&\\
+\textbf{5} & 1 & & & &&
+\end{tabular}
+}
+\caption{Number of pairs of faces in the cellular image of the diagonal $4$ and $5$-dimensional permutahedra.}
+\label{t:dim4-5}
+\end{figure}
+
+The diagonals obey to the formula $\binom{n}{k+1}(k+1)^{n-k-1}(n-k)^{k-1}$.
+
+Their sum is equal to $1,2,8,50,432,4802,65536...$.
+
+\begin{figure}[h]
+\centerline{\begin{tabular}{c|c|rrrrrrr|l}
+\textbf{Pairs $(F,G) \in \Ima\triangle_{(P,\vec v)}$} & \textbf{Polytopes} & \textbf{0} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} & \textbf{\cite{OEIS}} \\
+\hline
+& \text{Associahedra} & 1 & 2 & 6 & 22 & 91 & 408 & 1938 & \OEIS{A000139}  \\
+$\dim F + \dim G = \dim P$  & \text{Multiplihedra} & 1 & 2 & 8 & 42 & 254 & 1678 & 11790 &  to appear \\
+  & \text{Permutahedra} & 1 & 2 & 8 & 50 & 432 & 4802 & 65536 &  \OEIS{A007334} \\
+\hline
+  & \text{Associahedra} & 1 & 3 & 13 & 68 & 399 & 2530 & 16965 &  \OEIS{A000260} \\
+  $\dim F=\dim G =0$ & \text{Multiplihedra} & 1 & 3 & 17 & 122 & 992 & 8721 & 80920 & to appear \\
+  & \text{Permutahedra} & 1 & 3 & 17 & 149 & 1809 & 28399 & 550297 &  \OEIS{A213507} 
+\end{tabular}}
+\caption{Number of pairs of faces in the cellular image of the diagonal of the associahedra, multiplihedra and permutahedra of dimension $0\leq \dim P \leq 6$, induced by any good orientation vector.}
+\label{table:numerology}
+\end{figure}
+
+
 
 \emph{Acknowledgements.}    
 
