--- a/Poissons.tex
+++ b/Poissons.tex
@@ -155,8 +155,12 @@
 \email{}
 
 \author{Guillaume Laplante-Anfossi}
-\address{Universit\'e Sorbonne Paris Nord, Laboratoire Analyse, G\'eom\'etrie et Applications, CNRS, UMR 7539, F-93430 Villetaneuse, France.}
-\email{laplante-anfossi@math.univ-paris13.fr}
+\address{School of Mathematics and Statistics, University of Melbourne, Victoria, Australia}
+\email{guillaume.laplanteanfossi@unimelb.edu.au}
+
+\author{Kurt Stoeckl}
+\address{}
+\email{}
 
 
 
