Including work on the bijection

--- a/Poissons.bib
+++ b/Poissons.bib
@@ -53,3 +53,36 @@
   year            = {2022}
 }
 
+@article{kajitani1982number,
+  title={On the number of essential complementary partitions},
+  author={Kajitani, YOJI and Ueno, S and Chen, Wai-Kai},
+  journal={IEEE Transactions on Circuits and Systems},
+  volume={29},
+  number={8},
+  pages={572--574},
+  year={1982},
+  publisher={IEEE}
+}
+
+@article{chen1971tables,
+  title={Tables of essential complementary partitions},
+  author={Chen, Wai-Kai and Goyal, I},
+  journal={IEEE Transactions on Circuit Theory},
+  volume={18},
+  number={5},
+  pages={562--563},
+  year={1971},
+  publisher={IEEE}
+}
+
+@article{chen1969computer,
+  title={Computer generation of trees and co-trees in a cascade of multiterminal networks},
+  author={Chen, Wai-Kai},
+  journal={IEEE Transactions on Circuit Theory},
+  volume={16},
+  number={4},
+  pages={518--526},
+  year={1969},
+  publisher={IEEE}
+}
+
