--- a/Poissons.tex
+++ b/Poissons.tex
@@ -28,7 +28,7 @@
 % THEOREMS -------------------------------------------------------
 \newtheorem{thm}{Theorem}[section]
 \newtheorem{corollary}[thm]{Corollary}
-\newtheorem{lemmma}[thm]{Lemma}
+\newtheorem{lemma}[thm]{Lemma}
 \newtheorem{proposition}[thm]{Proposition}
 \newtheorem{Questions}[thm]{Questions}
 \theoremstyle{definition}
@@ -81,6 +81,10 @@
 \newcommand{\LP}{L}
 \newcommand{\FL}{F\!L}
 \newcommand{\mc}{\mu}
+
+\newcommand{\EC}{C}
+\newcommand{\OP}{\Delta}
+\newcommand{\BT}{BT}
 
 
 \newcommand{\0}{\color{blue}{\mathsf{0}}}
@@ -173,8 +177,9 @@
 
 \thanks{G. L.-A. was supported by the European Union's Horizon 2020 research and innovation program under the Marie Sklodowska-Curie grant agreement No 754362 \inlinegraphics{EU.png}, by the Natural Sciences and Engineering Research Council of Canada (NSERC) and by the ANR-20-CE40-0016 Higher Algebra, Geometry and Topology.}
 
+%========================================
 \begin{document}
-
+%========================================
 
 \begin{abstract}
 The purpose of this note is to provide a new combinatorial description 
@@ -344,16 +349,174 @@ $\dim F + \dim G = \dim P$  & \text{Multiplihedra} & 1 & 2 & 8 & 42 & 254 & 1678
 
 
 
-\emph{Acknowledgements.}    
+\section{The Bijection}
 
+In this section we shall establish a bijection between $\OP$ and a family of pairs of unordered partitions introduced and enumerated in a series of 3 papers \cite{chen1969computer} \cite{chen1971tables}, \cite{kajitani1982number}. An intermediary bijection to a type of bipartite tree is of particular importance and provides ... 
+
+\subsection{Essential Complementary Partitions and Bipartite Trees}
+
+We first recall the necessary definitions and results of these papers.
+
+\begin{definition}
+Let $\OP$ be the set of ordered pairs of partitions.
+\end{definition}
+
+\begin{definition}
+We say $P_I = \cup_{i\in I} P_i$ is a \textbf{partition} of $V = \{1,\dots,n\}$ if 
+\begin{itemize}
+    \item $ \cup_{i\in I} P_i = V$
+    \item $P_i \cap P_j = \emptyset$ for $i \neq j$
+\end{itemize}
+A set of \textbf{distinct representatives} of a partition is a set $R\subset V$ such that $\forall i \in I,|P_i \cap R| = 1$.
+
+\end{definition}
+
+
+\begin{definition}
+Let $K = \{1,\dots,n\}$, and let $P:=(P_L,P_R):=(\cup_{l\in L} P_l , \cup_{r\in R} P_r)$ be a pair of partitions of $V$. The pair $P$ is called \textbf{complimentary} if there exists $I\subset K$ and $p \in I$ such that $I$ and $(V\setminus I) \cup \{p\}$ are distinct representatives of $P_L$ and $P_R$ respectively.
+\\\\
+The pair $P$ of complimentary partitions is called \textbf{essential} if there does not exists proper subsets $K' \subset K, L'\subset L$ and $R'\subset R$ such that $P'=(P_{L'},P_{R'})$ is a complimentary partition of $K'$.
+\\\\
+We shall denote the set of all essential complimentary pairs of partitions as $\EC$.
+\end{definition}
+
+\begin{example}
+n=2, n=3 [TODO]
+\end{example}
+
+We note that the pairs of partitions of $\EC$ are unordered, and that the pairs of partitions of $\OP$ are ordered.
+
+\begin{definition}
+A \textbf{tree} is a simply connected graph with no cycles. A \textbf{bipartite graph} is a graph whose vertices are partitioned into two sets such that vertices in one set are only adjacent to vertices in the other, we say it is \textbf{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. We say a graph with $n$ edges is \textbf{edge labelled} if there exists a bijection between the edges and $\{1,\dots,n\}$.
+Let $\BT$ denote the set of edge labelled ordered bipartite trees.
+\end{definition}
+
+\begin{proposition} [Theorem 3 of \cite{kajitani1982number}] \label{EC Graph Bijection}
+The sets $\BT$ and $\EC$ are in bijection through $G:\EC \to \BT$ and $P:\BT \to \EC$, where
+\begin{itemize}
+    \item $G$ takes a pair $(P_L,P_R)$ and constructs partitioned vertices $(V_L,V_R)$. For each $i \in  \{1,\dots,n\}$ an edge is added between $v_l$ and $v_r$ if $i\in P_l$ and $i \in P_r$. 
+    \item $P$ takes a tree from $\BT$ and labels the vertices $(V_L,V_R)$ by the edges which are adjacent to them. The labels of the vertices can then be interpreted as a pair of partitions.
+\end{itemize}
+
+\end{proposition}
+
+\begin{example}
+\phantom{a}\\
+\begin{center}
+\includegraphics{Images/bijections_example.png}
+\end{center}
+\end{example}
+
+\begin{corollary}[\cite{kajitani1982number}]
+$|\EC_n| = 2(n+1)^{n-2}$
+
+\end{corollary}
+
+\subsection{The Bijection}
+
+\begin{thm}
+The sets $\OP$ and $\EC$ are in bijection through $u:\OP \to \EC$ and $o:\EC\to \OP$.
+\begin{itemize}
+    \item The function $u$ forgets the order of the ordered partition pair.
+    \item The function $o$ uniquely orders an essential complimentary partition pair through lemma \ref{Order Lemma}.
+\end{itemize}
+\end{thm}
+We shall prove this theorem by establishing the necessary total order, showing the functions are well defined, and then showing they are injective.
+
+\begin{lemma} \label{u well defined}
+$u:\OP \to \EC$ is well defined.
+\end{lemma}
+\begin{proof}
+Let $P \in \OP_n$. Then $G(u(P))$ is a graph with $l+r=n+1$ vertices, and $n$ edges. Furthermore, as no vertices can be isolated it must be the case that this graph is a tree. It is straightforward to verify that $G(u(P))$ must be an element of $BT$, but here is how we may explicitly produce the necessary distinct representatives using an algorithm of theorem 2 of \cite{kajitani1982number}.
+\\\\
+Let $G'$ be a copy of $G(u(P))$. While there is a vertex of degree $1$ in $G'$ delete it and add the sole edge of that vertex as a distinct representative of the corresponding partition of that vertex. As $G'$ is a tree this process can continue until there is a single edge connecting two vertices of degree $1$. This edge specifies the element $p$ of the distinct representatives.
+\end{proof}
+
+\begin{lemma} \label{Order Lemma}
+Let $P=(P_L,P_R) \in \EC$, there exists total orders on $P_L$ and $P_R$ induced via the bijection $G(P)$
+\begin{itemize}
+    \item For $l,l' \in L$ there exists a unique minimal set of edges $p_{l,l'}$ of even cardinality connecting $V(P_l)$ and $V(P_{l'})$ in $G(P)$ (similar for $R$). We partition this set of edges as $I\cup J$ where $I$ and $J$ are each pairwise non-adjacent, and $I$ contains the minimal edge.
+    \item Orient each path so that $I$ points left to right, and $J$ points right to left (same orientation for $P_L$ and $P_R$). 
+    \item We say $P_l< P_{l'}$ (or $P_r < P_{r'}$) if the constructed path points from $V(P_l) \to V(P_{l'})$ ($V(P_r) \to V(P_{r'})$.
+\end{itemize}
+\end{lemma}
+\begin{proof}
+We first show our binary relation is well defined before verifying that it defines a total order on $G(P)$ and hence $P$ via the bijection of \ref{EC Graph Bijection}.
+\\\\
+As $G(P)$ is a bipartite tree, every vertex is connected, and every path connecting two vertices on the same side must be of even length. As $I$ and $J$ are each pairwise non-adjacent, they must partition the path in an alternating fashion i.e. $p=(I_{i_1},J_{j_1},I_{i_2},J_{j_2},..., )$, hence we can orient the path by forcing $I$ to point left and $J$ to point right.
+\\\\
+This order is clearly total, reflexive (by convention) and anti-symmetric, what remains to be checked is its transitivity. Let $p_{v,v'}$ denote the unique minimal path between two vertices and for a set $A$ let $A_*:= \min A$, in particular ${I_{v,v'}}_*$ denotes the minimal value of $I$ on this path. Suppose there exists three vertices $a,b,c$ all on the same side (either left or right) such that the following conditions hold.
+\begin{align*}
+    a<b \quad &\iff \quad {I_{a,b}}_* = ({I_{a,b}} \cup J_{a,b})_*\\
+    b<c \quad &\iff \quad{I_{b,c}}_* = ({I_{b,c}} \cup J_{b,c})_*
+\end{align*}
+As $a,b,c$ are all vertices on a tree there must exist a middle vertex $m$ such that all unique minimal paths $p_{a,b},p_{b,c}$ and $p_{a,c}$ use this vertex (in general this vertex could be $b$). There are four possibilities for the joint locations of ${I_{a,b}}_*$ and ${I_{b,c}}_*$ which are illustrated in the figure below.
+\begin{center}
+\includegraphics{Images/transitivity cases.png}   
+\end{center}
+
+
+\begin{enumerate}
+    \item Here ${I_{b,c}}_* \in J_{a,b}$ and hence ${I_{a,c}}_*={I_{a,b}}_*<{I_{b,c}}_*$.
+    \item Here ${I_{a,c}}_* = ({I_{a,b}} \cup {I_{b,c}})_*$.
+    \item Here we have a contradiction as ${I_{b,c}}_* \in J_{a,b} \implies {I_{a,b}}_*<{I_{b,c}}_*$  and ${I_{a,b}}_* \in J_{b,c} \implies {I_{b,c}}_*<{I_{a,b}}_*$.
+    \item Here ${I_{a,b}}_* \in J_{b,c}$ and hence ${I_{a,c}}_*={I_{b,c}}_*<{I_{a,b}}_*$. 
+\end{enumerate}
+So, for every case except the contradictory $3$rd we have that \begin{align*}
+    {I_{a,c}}_* = ({I_{a,b}} \cup J_{a,b} \cup {I_{b,c}} \cup J_{b,c})_* = ({I_{a,c}} \cup J_{a,c})_* \implies a < c 
+\end{align*}
+\end{proof}
+An alternate proof given by Guillaume is the following, but I think we still might need to to handle the contradiction case in this. (or this fixed by something I'm not seeing?)
+\begin{center}
+\includegraphics{Images/alternate_transitivity.png}
+\end{center}
+
+
+This order far from being arbitrary provides the unique way to order an essential complimentary partition pair into an ordered partition pair, as we shall demonstrate in the next lemma.
+\begin{lemma} \label{o well defined}
+$o:\EC \to \OP$ is well defined.
+\end{lemma}
+\begin{proof}
+Let $P=(P_L,P_R) \in EC$ and consider $o(P)$. We first show that every $I,J \in D(n)$ which correspond to a path between vertices is satisfied. Suppose $I,J$ corresponds to a path between two vertices on the left, i.e.
+\begin{align*}
+    V(P_l) = V_{L_1} \xrightarrow{i_1} V_{R_1}\xrightarrow{j_1} V_{L_2} \xrightarrow{i_2}... \xrightarrow{i_{k}} V_{R_{k-1}} \xrightarrow{j_k} V_{L_k}=V(P_{l'})
+\end{align*}
+By construction we have that $I = \{i_1,...,i_k\},J=\{j_1,...,j_k\} \in D(n)$ (note we are ordering $I$ and $J$ by the path, so it is not necessarily the case that $\min I = i_1$). Furthermore, each sub partition of $P_R$ either contains a single element of $I$ and a single element of $J$, or it contains no elements of $I$ and no elements of $J$. As such for any ordering of the sub-partitions of $P_R$ we have that 
+\begin{align*}
+    \forall m, |\bigcup_{1\leq k \leq m} P_{R,k} \cap I| = |\bigcup_{1\leq k \leq m} P_{R,k} \cap J|
+\end{align*}
+Hence in order for this $D(n)$ condition to be satisfied it must be the case that for some ordering of the sub-partitions of $P_L$ that we have
+\begin{align*}
+    \exists m, |\bigcup_{1\leq k \leq m} P_{L,k} \cap I| > |\bigcup_{1\leq k \leq m} P_{L,k} \cap J|
+\end{align*}
+Every sub-partition of $P_L$ excluding the $l$th and $l'$th either contains no elements of both $I$ and $J$, or it contains a single element of $I$ and a single element of $J$. So the only way for the condition to be satisfied is for $P_l$ to come before $P_{l'}$, which is precisely what is required by the total order.
+\\\\
+If $I,J$ corresponds to a path between two vertices on the right,
+\begin{align*}
+    V(P_r) = V_{R_1} \xrightarrow{j_1} V_{L_1}\xrightarrow{i_1} V_{L_2} \xrightarrow{j_2}... \xrightarrow{j_{k}} V_{L_{k-1}} \xrightarrow{1_k} V_{R_k}=V(P_{r'})
+\end{align*}
+then a similar chain of logic implies we must have an ordering of the sub-partitions of $P_R$ such that
+\begin{align*}
+    \exists m, |\bigcup_{1\leq k \leq m} P_{R,k} \cap I| < |\bigcup_{1\leq k \leq m} P_{R,k} \cap J|
+\end{align*}
+and this can only happen if $P_r$ comes before $P_{r'}$.
+\\\\
+What remains to be shown is that every $I,J \in D(n)$ which does not correspond to a path is satisfied... 
+\\\\
+A likely proof method seems to be assume there exists such an $I,J$ which contradicts the $D(n)$ assumption then show this leads to contradiction....
+\end{proof}
+
+\begin{lemma} \label{o and u are injective}
+Both $u:\OP \to \EC$ and $o:\EC\to \OP$ are injective, with the other function being their inverse.
+\end{lemma}
+\begin{proof}
+The forgetful function $u$ is clearly the inverse to $o$ as forgetting any assigned order will clearly return the original essential complimentary partition pair. The ordering function $o$ is the inverse to $u$ as it returns the sole ordering of the sub-partitions which is compatible with the $D(n)$ conditions.
+\end{proof}
+
+\emph{Acknowledgements.}    
 
 \bibliographystyle{amsalpha}
 
 \bibliography{Poissons}
 
-
-
 \end{document}
-
-
-
