proof for Matthieu's formula

--- a/Poissons.tex
+++ b/Poissons.tex
@@ -17,19 +17,19 @@
 
 \title{Poissons}
 
-\author{B\'er\'enice Delcroix-Oger}
+\author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
+\address{Institut Montpelliérain Alexander Grothendieck, Université de Montpellier, France}
+\email{berenice.delcroix-oger@umontpellier.fr}
+
+\author[M. Josuat-Vergès]{Matthieu Josuat-Verg\`es}
 \address{}
 \email{}
 
-\author{Matthieu Josuat-Verg\`es}
-\address{}
-\email{}
-
-\author{Guillaume Laplante-Anfossi}
+\author[G. Laplante-Anfossi]{Guillaume Laplante-Anfossi}
 \address{School of Mathematics and Statistics, University of Melbourne, Victoria, Australia}
 \email{guillaume.laplanteanfossi@unimelb.edu.au}
 
-\author{Kurt Stoeckl}
+\author[K. Stoeckl]{Kurt Stoeckl}
 \address{}
 \email{}
 
