--- a/aux/commands.tex
+++ b/aux/commands.tex
@@ -90,6 +90,7 @@
 
 \newcommand{\Guillaume}[1]{\textcolor{magenta}{\underline{Guillaume}: #1}}
 \newcommand{\Kurt}[1]{\textcolor{blue}{\underline{Kurt}: #1}}
+\newcommand{\BDO}[1]{\textcolor{ForestGreen}{\underline{Bérénice}: #1}}
 
 \DeclareMathOperator{\Ima}{Im} %Image d'une fonction
 
